0. Python basics/da.ipynb

--- a/0. Python basics/da.ipynb
+++ b/0. Python basics/da.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nogle typer kan konverteres til andre, for eksempel flydende punkttal til heltal:"
+    "Nogle typer kan konverteres til andre, for eksempel flydende punkttal (float) til heltal (integer):"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Såvel som ethvert tal kan konverteres til en streng:"
+    "Såvel som ethvert tal kan konverteres til en streng (string):"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I bot-tuple og lister har hver værdi en indeks. Indeksene i Python starter altid fra 0, så den første værdi har indeks 0, den anden har indeks 1, osv. Du kan få en værdi fra en tuple eller fra en liste ved at specificere dens indeks:"
+    "I både tupler og lister har hver værdi et indeks. Indekserne i Python starter altid ved 0, så den første værdi har indeks 0, den anden har indeks 1, osv. Du kan få en værdi fra en tuple eller fra en liste ved at specificere dens indeks:"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "Vær opmærksom på, at selvom tuples oprettes med symboler `(` `)`, skal du angive dets indeks i firkantede parenteser for at få adgang til en værdi fra en tuple.\n",
     "\n",
-    "Hvad er forskellen på tuples og lister? Lister kan ændres, hvilket betyder, at du kan erstatte enhver værdi inde i listen med en ny:"
+    "Hvad er forskellen på tupler og lister? Lister kan ændres, hvilket betyder, at du kan erstatte enhver værdi inde i listen med en ny:"
    ]
   },
   {
@@ -308,8 +308,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Du kan tænke på en variabel som en enkelt frugt, du kan få fra et grøntafdeling i et supermarked. Containere er plastikposer eller kasser du kan bruge til at pakke flere frugter sammen som et enkelt element. Så hvis det er en plastikpose, hvor du kan lægge et hvilket som helst antal frugter, fjerne eller erstatte nogle senere, er det et eksempel på en liste. Hvis det er en forseglet pose, hvor du ikke kan erstatte en frugt, er det et eksempel på en tuple.\n",
-    "Både lister og tuples kan udpakkes — så hvert element i containeren tildeles til en separat variabel:"
+    ">Du kan tænke på en variabel som en enkelt frugt, du kan få fra et grøntafdeling i et supermarked. Beholdere er plastikposer eller kasser du kan bruge til at pakke flere frugter sammen som et enkelt element. Så hvis det er en plastikpose, hvor du kan lægge et hvilket som helst antal frugter, fjerne eller erstatte nogle senere, er det et eksempel på en liste. Hvis det er en forseglet pose, hvor du ikke kan erstatte en frugt, er det et eksempel på en tuple."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Både lister og tupler kan udpakkes — så hvert element i beholderen tildeles til en separat variabel:"
    ]
   },
   {
@@ -336,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hvis du vil pakke kun en del af et tupel eller en liste ud, f.eks. tage første og tredje element, så brug understregningen `_` for de elementer, du ikke har brug for at gemme i en separat variabel:"
+    "Hvis du vil pakke kun en del af et tupel eller en liste ud, f.eks. tage første og tredje elementer, så brug understregningen `_` for de elementer, du ikke har brug for at gemme i en separat variabel:"
    ]
   },
   {
@@ -397,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alle tre containere har en metode `len()`, som viser antallet af elementer i beholderen."
+    "Alle tre beholdere har en metode `len()`, som viser antallet af elementer i beholderen."
    ]
   },
   {
@@ -413,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Containere kan også bestå af containere, du kan indlejre lister indeni lister, lave liste af tuples eller dictionary af lister. Her er nogle eksempler:"
+    "Beholdere kan også bestå af beholdere, du kan indlejre lister indeni lister, lave liste af tuples eller dictionary af lister. Her er nogle eksempler:"
    ]
   },
   {
@@ -746,7 +752,7 @@
     "    \"\"\" computes reminder and quotient of a / b and return both \"\"\"\n",
     "    q = a // b\n",
     "    r = a % b\n",
-    "    (q, r)"
+    "    return (q, r)"
    ]
   },
   {
@@ -1167,7 +1173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interval er ikke en liste, det er et specielt objekt (vi vil diskutere objekter):"
+    "`Range` er ikke en liste, det er et specielt objekt (vi vil diskutere objekter):"
    ]
   },
   {
@@ -1184,7 +1190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Men du kan konvertere enhver rekkevidde til en liste:"
+    "Men du kan konvertere enhver `range` til en liste:"
    ]
   },
   {
@@ -1211,7 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logiske operationer, betingelser, grenesnit\n",
+    "## Logiske operationer, betingelser, forgrening\n",
     "\n",
     "Vi har allerede nævnt booleske (logiske) variabler, der kun har to værdier, `Sandt` eller `Falsk`. Men hvad skal de bruges til? De bruges til at kontrollere, om en bestemt betingelse er korrekt. For at producere booleske værdier skal du sammenligne værdierne. Her er et eksempel med seks operatører, du kan bruge til at sammenligne to værdier:"
    ]
@@ -1232,7 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Som du kan se, resulterede brugen af hver af de seks operatører enten i `True` eller `False`, og vi fik kun `True` i tilfælde, hvor betingelsen faktisk var valid (`a < b` og `a <= b`).\n",
+    "Som du kan se, resulterede brugen af hver af de seks operatører enten i `True` eller `False`, og vi fik `True` kun i de tilfælde, hvor betingelsen faktisk var gyldig (`a < b` og `a <= b`).\n",
     "\n",
     "Du kan kombinere flere betingelser ved at bruge de logiske operatører \"and\" (`&`) og \"or\" (`|`). For eksempel kan vi i stedet for `a ≤ b` gøre det ved at bruge operatoren \"and\" og to separate sammenligninger:"
    ]
@@ -1448,7 +1454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Du kan oprette en ny klasse ikke fra bunden, men ved at udvide den anden klasse. For eksempel opretter vi nedenfor klassen 'Student' ved at udvide klassen 'Person'. Den nye klasse vil have alt, hvad forældreklassen har (det kaldes også en superklasse) og også en ny egenskab - ordbog med aktuelle karakterer og to nye metoder - 'set_exam_result()' og 'show_grades()':"
+    "Du kan oprette en ny klasse ikke fra bunden, men ved at udvide den anden klasse. For eksempel opretter vi nedenfor klassen `Student` ved at udvide klassen `Person`. Den nye klasse vil have alt, hvad forældreklassen har (det kaldes også en superklasse) og også en ny egenskab - ordbog med aktuelle karakterer og to nye metoder - `set_exam_result()` og `show_grades()`:"
    ]
   },
   {
@@ -1639,7 +1645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Du vil se, at denne kommando faktisk installerer ikke kun `matplotlibg`, men flere andre pakker, f.eks. `numpy`, `pillow` og flere andre. Disse er *afhængigheder*, forfatterne af pakken `matplotlib` genbrugte funktioner fra disse pakker for at gøre deres arbejde lettere.\n",
+    "Du vil se, at denne kommando faktisk installerer ikke kun `matplotlib`, men flere andre pakker, f.eks. `numpy`, `pillow` og flere andre. Disse er *afhængigheder*, forfatterne af pakken `matplotlib` genbrugte funktioner fra disse pakker for at gøre deres arbejde lettere.\n",
     "\n",
     "Hvis du allerede har installeret denne pakke, og kører denne kode igen, vil du se en besked `Krav allerede opfyldt`.\n",
     "\n",
@@ -1668,7 +1674,7 @@
    "source": [
     "Hvis du flytter en musen cursor til navnet på pakken i koden ovenfor, vil du se en flydende dialog med hjælpetekst, som beskriver hvad denne pakke gør, og hvilke moduler den indeholder.\n",
     "\n",
-    "De fleste af de populære pakker har dokumentation, som beskriver alle moduler og funktioner. For eksempel her er en [dokumentation](https://matplotlib.org/stable/index.html) for pakken \"matplotlib\"."
+    "De fleste af de populære pakker har dokumentation, som beskriver alle moduler og funktioner. For eksempel her er en [dokumentation](https://matplotlib.org/stable/index.html) for pakken `matplotlib`."
    ]
   },
   {
@@ -1712,7 +1718,17 @@
     "* `torch.optim` - indeholder optimeringsalgoritmer, funktioner der ændrer vægtene baseret på tabet.\n",
     "* `torch.utils` - indeholder hjælpefunktioner - funktioner, der ikke bruges direkte til ANN, men hjælper med at forberede data osv.\n",
     "\n",
-    "Nogle af modulerne har også undermoduler, f.eks. `torch.nn` har et undermodul `torch.nn.functional`, der indeholder forskellige funktioner (f.eks. aktiveringsfunktioner). Modulet `torch.utils` indeholder undermodulet `torch.utils.data` til arbejde med datas"
+    "Nogle af modulerne har også undermoduler, f.eks. `torch.nn` har et undermodul `torch.nn.functional`, der indeholder forskellige funktioner (f.eks. aktiveringsfunktioner). Modulet `torch.utils` indeholder undermodulet `torch.utils.data` til arbejde med datsæt og data loaders.    \n",
+    "\n",
+    "Du behøver ikke at kende alle disse på forhånd. Følg blot undervisningens indhold, og du vil med tiden lære det hele.   \n",
+    "\n",
+    "### torchvision  \n",
+    "\n",
+    "[Torchvision](https://pytorch.org/vision/stable/index.html) er et supplement til Torch/Pytorch, der gør det nemt at arbejde med billeder. Det indeholder moduler, klasser og funktioner, som lader dig oprette datasæt baseret på mapper med billeder, udføre billedtransformationer (beskæring, ændring af størrelse osv.) og andre nyttige ting. Det er uundværligt, hvis du skal bruge PyTorch til billeder.  \n",
+    "\n",
+    "### torchinfo   \n",
+    "\n",
+    "Torchinfo er en lille pakke, som giver dig information om PyTorch-modeller: hvor mange lag de har, hvor mange parametre, osv."
    ]
   }
  ],
@@ -1732,7 +1748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
