1. Digital images/da.ipynb, en.ipynb

--- a/1. Digital images/en.ipynb
+++ b/1. Digital images/en.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The simplest digital image consists of pixels, which are characterized by a single number, its *intensity*. Usually a whole number between 0 and 255 is used in this case. Computer (or any other device, e.g. smartphone or tablet) shows 0 as a black color, 255 as a while color and all numbers in between are shown as shades of gray. Therefore such images are usually called as *grayscale*.\n",
+    "The simplest digital image consists of pixels, which are characterized by a single number, its *intensity*. Usually a whole number between 0 and 255 is used in this case. Computer (or any other device, e.g. smartphone or tablet) shows 0 as a black color, 255 as a white color and all numbers in between are shown as shades of gray. Therefore such images are usually called as *grayscale*.\n",
     "\n",
     "Open the first sheet of [this Excel file](../mlcourse.xlsm) (enable macros when open), which demonstrates the idea of the grayscale image, and play with the intensities.\n",
     "\n",
@@ -305,7 +305,7 @@
     "\n",
     "By understanding the programming principles and the idea of representing an image as an array of numbers one can create any image. For example, the image below resembles the Danish national flag but in black and white representation. We simply create a black image (array filled with 0) and then change pixels in 40 columns and 30 rows located in the middle to white.\n",
     "\n",
-    ">**Note to teacher:**<br> discuss how to show the images using other color gradients (e.g. `spring`, `cool`, `summer`) and how to add the colobar legend. \n",
+    ">**Note to teacher:**<br> discuss how to show the images using other color gradients (e.g. `spring`, `cool`, `summer`) and how to add the colorbar legend. \n",
     "\n"
    ]
   },
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ad you can see, we use a new code structure here, `if`, which checks if a particular condition and run a code only if this condition is true. \n",
+    "As you can see, we use a new code structure here, `if`, which checks if a particular condition and run a code only if this condition is true. \n",
     "\n",
     "In this case it checks if the current column number `c` is between two values. One is the current row number `r` and the second one is located from the right part of the image by `r` pixels to the left. For example if `r = 10`, the condition will be true for all column indices between 10 and 90. Only if this condition is true, the code `img_diag[r, c] = 255` will be executed.\n",
     "\n",
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Therefore in order to make pixels shown as colors every pixel has three values — intensity of greed, blue and red colors. They also usually coded as a number between 0 and 255. \n",
+    "Therefore in order to make pixels shown as colors every pixel has three values — intensity of green, blue and red colors. They also usually coded as a number between 0 and 255. \n",
     "\n",
     "For example, a pixel with RGB values `(255, 0, 0)` is fully red, while `(0, 255, 0)` is fully green, and `(0, 0, 255)` is blue. The combination of full intensity in all three channels, `(255, 255, 255)`, results in a white color, while absence of intensity in all channels, `(0, 0, 0)`, yields black.\n",
     "\n",
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Actually in Jupyter notebook you do know even need to use `display()` just write the name of the image variable and run the cell:"
+    "Actually in Jupyter notebook you do not even need to use `display()` just write the name of the image variable and run the cell:"
    ]
   },
   {
@@ -1262,7 +1262,7 @@
     "*  Rotation \n",
     "*  Distortions\n",
     "\n",
-    "**Intensities transformations** — behold position of the pixels, but change their color intensity.\n",
+    "**Intensities transformations** — keep the position of the pixels fixed, but change their color intensity.\n",
     "*  Color conversion\n",
     "*  Contrast enhancement\n",
     "*  Filtering\n",
@@ -1410,7 +1410,7 @@
     "# flip image vertically by reordering rows of pixels in reverse order\n",
     "red_apples_vf = red_apples[::-1, :]\n",
     "\n",
-    "# show the cropped images\n",
+    "# show the vertically flipped image of red apples\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(red_apples)\n",
     "plt.title(\"Red (original)\")\n",
@@ -1433,7 +1433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# place your code here\n",
+    "# flip image vertically and horizontally by reordering rows and columns of pixels in reverse order\n",
     "red_apples_vf = red_apples[::-1, :]\n",
     "red_apples_hf = red_apples[:, ::-1]\n",
     "red_apples_bf = red_apples[::-1, ::-1]\n",
@@ -1459,26 +1459,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "red_apples.shape\n",
-    "more_apples = np.hstack((red_apples, red_apples, red_apples))\n",
-    "\n",
-    "even_more_apples = np.vstack((more_apples, more_apples))\n",
-    "plt.imshow(even_more_apples)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
     "\n",
-    "\n",
-    "If two (or more) images are represented by arrays with the same number of rows, columns or both, they can be merged into a new image. You can merge arrays (and hence the corresponding images) by stacking the vertically or horizontally. You can make a sequence of stacks. Here is an example:"
+    "If two (or more) images are represented by arrays with the same number of rows, columns or both, they can be merged into a new image. You can merge arrays (and hence the corresponding images) by stacking them vertically or horizontally. You can make a sequence of stacks. Here is an example:"
    ]
   },
   {
@@ -1507,6 +1493,60 @@
     "\n",
     "# show the dimension of the new image\n",
     "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "red_apples.shape\n",
+    "more_apples = np.hstack((red_apples, red_apples, red_apples))\n",
+    "\n",
+    "even_more_apples = np.vstack((more_apples, more_apples))\n",
+    "plt.imshow(even_more_apples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the code in Python that uses the OpenCV library to flip an image of apple vertically, horizontally and both vertically and horizontally:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load and flip the image\n",
+    "image = cv2.imread('datasets/Apples.jpg')\n",
+    "flipped_vertical = cv2.flip(image, 0)\n",
+    "flipped_horizontal = cv2.flip(image, 1)\n",
+    "flipped_both = cv2.flip(image, -1)\n",
+    "\n",
+    "# Combine and show the images into a 2x2 grid\n",
+    "top_row = np.hstack((image, flipped_vertical))\n",
+    "bottom_row = np.hstack((flipped_horizontal, flipped_both))\n",
+    "all_images = np.vstack((top_row, bottom_row))\n",
+    "all_images = cv2.resize(all_images, (600, 600))\n",
+    "\n",
+    "# show the flipped images\n",
+    "cv2.imshow('All Flipped Images', all_images)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will display a window with four images side by side: original image, vertical flip, horizontal flip, and both flips."
    ]
   },
   {
@@ -1610,7 +1650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# definig the new size in pixels (width, height)\n",
+    "# defining the new size in pixels (width, height)\n",
     "new_size = (400, 300)\n",
     "\n",
     "resized_img = img.resize(new_size)\n",
@@ -1630,7 +1670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# definig the new size which does not keep the correct aspect ratio\n",
+    "# defining the new size which does not keep the correct aspect ratio\n",
     "new_size = (400, 100)\n",
     "\n",
     "resized_img = img.resize(new_size)\n",
@@ -1703,7 +1743,7 @@
    "source": [
     "Try to play with the sheering factor and see how it affects the outcome. \n",
     "\n",
-    "You probably wonder why distort the images? Well in fact these kind of transformations are mostly used to do the opposite — remove the distortion introduced e.g. by camera or other obstacles. But sometimes distortion is also a way to enrich the image dataset in order to train a good model, which we will discuss in the last class.\n",
+    "You probably wonder why distort the images? Well in fact these kind of transformations are mostly used to do the opposite — remove the distortion introduced e.g. by camera or other obstacles. But sometimes distortion is also a way to enrich the image dataset in order to train a good model, which we will discuss it in the last class.\n",
     "\n",
     "The three transformations we discussed: rotation, flipping and sheering are a part of more general class of geometric transformation of the image pixels — *[affine transformations](https://www.graphicsmill.com/docs/gm/affine-and-projective-transformations.htm)*. One can think of affine transformation as a mathematical expression which takes coordinates of every pixel, e.g. (10, 20) and then computes new coordinates for this pixel and make this new coordinates fit the image plane."
    ]
@@ -1714,7 +1754,7 @@
    "source": [
     "### Transformation of intensities\n",
     "\n",
-    "The simples transformation with intensities is a conversion between different color models. For example, you can take a color image represented by RGB (Red, Green, Blue) model and make it  grayscale. It's commonly used for simplifying images or preparing them for processing tasks.\n",
+    "The simplest transformation with intensities is a conversion between different color models. For example, you can take a color image represented by RGB (Red, Green, Blue) model and make it  grayscale. It's commonly used for simplifying images or preparing them for processing tasks.\n",
     "\n",
     "Here is an example"
    ]
@@ -1810,7 +1850,7 @@
     "from PIL import ImageFilter\n",
     "\n",
     "# apply median filter with window 7x7\n",
-    "blurred_img = img.filter(ImageFilter.MedianFilter(size=9))\n",
+    "blurred_img = img.filter(ImageFilter.MedianFilter(size=7))\n",
     "display(blurred_img)"
    ]
   },
@@ -1992,7 +2032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
